Use 100lvh on mobile to prevent next section peeking
Accounts for disappearing URL bar on mobile browsers.
Also fix arrow ligatures and minor copy tweaks.

--- a/css/styles.css
+++ b/css/styles.css
@@ -388,14 +388,14 @@ body {
   }
 
   .section {
-    height: 100svh;
-    min-height: 100svh;
+    height: 100lvh;
+    min-height: 100lvh;
     padding: 1rem 1rem;
   }
 
   .section--experience {
-    height: 100svh;
-    min-height: 100svh;
+    height: 100lvh;
+    min-height: 100lvh;
     overflow-y: auto;
     scrollbar-width: none;
     -webkit-overflow-scrolling: touch;
